# dgef

./: .cirrus.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: release_dragonflybsd_amd64.yml  release_freebsd_amd64.yml  release_illumos_amd64.yml  release_linux_glibc_amd64.yml  release_linux_musl_amd64.yml  release_macosx_amd64.yml  release_netbsd_amd64.yml  release_openbsd_amd64.yml  release_windows_aarch64.yml  release_windows_amd64.yml
src/: commands.rs  detect.rs  main.rs  recode.rs
